<resources>
    <string name="app_name">NoticeBoard</string>
    <string name="name_app">Notice Board</string>
    <string name="username_label">Username</string>
    <string name="email_address">Email Address</string>
    <string name="password_name">Password</string>
    <string name="copyright">Powered By NoticeBoard © 2020-2021</string>
    <string name="user_name">Username</string>
    <string name="item_nature_title">Nature %d</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="create_new_account">Create a new account </string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="registration">Registration</string>
    <string name="login">Login</string>
    <string name="name_hint">Please enter your name</string>
    <string name="mail_hint">Please enter your mail id</string>
    <string name="mobile_hint">Please enter your mobile number</string>
    <string name="dob_hint">Please enter Date of birth</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="country_hint">Select Country</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="check_username">Please enter correct username</string>
    <string name="check_password">Please enter correct password</string>
    <string name="mail_validate">Incorrect Mail Id</string>
    <string name="name_validate">Incorrect Name</string>
    <string name="mobile_validate">Incorrect Mobile number</string>
    <string name="date_validate">Incorrect date of birth</string>
    <string name="password_validate">Password must be between 8 to 24 character</string>
    <string name="conpassword_validate">Password Mismatch</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_administrative">Administrative</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>