<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    tools:context=".Fragments.Register_info_Fragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/login_cardview"
        android:layout_width="match_parent"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardElevation="20dp"
        app:cardCornerRadius="16dp">

        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/reg_profile_pic_imageview"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/ic_profile_pic"
                    app:civ_border_color="@color/colorshadow"
                    app:civ_border_width="2dp"
                    app:civ_shadow="true"
                    app:civ_shadow_color="@color/colorshadow"
                    app:civ_shadow_radius="10dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/name_textinputlayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/reg_profile_pic_imageview"
                    android:layout_marginTop="4dp"
                    android:hint="@string/name_hint"
                    app:counterEnabled="true"
                    app:counterMaxLength="30"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/ic_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name_textinputedittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>




                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/mobile_textinputlayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/name_textinputlayout"
                    android:layout_marginTop="6dp"
                    android:hint="@string/mobile_hint"
                    app:counterEnabled="true"
                    app:counterMaxLength="30"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/ic_phone">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/mobile_textinputedittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/dob_textinputlayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/mobile_textinputlayout"
                    android:layout_marginTop="6dp"
                    android:hint="@string/dob_hint"
                    app:counterEnabled="true"
                    app:counterMaxLength="30"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/ic_calendar">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/dob_textinputedittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />

                </com.google.android.material.textfield.TextInputLayout>


                <RadioGroup
                    android:id="@+id/gender_radiogroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/dob_textinputlayout"
                    android:layout_marginTop="6dp"
                    android:orientation="horizontal"
                    android:weightSum="3">


                    <RadioButton
                        android:id="@+id/male_radiobutton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="8dp"
                        android:text="@string/male" />

                    <RadioButton
                        android:id="@+id/female_radiobutton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/female" />

                    <RadioButton
                        android:id="@+id/other_radiobutton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/other" />

                </RadioGroup>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/country_spinner"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/gender_radiogroup"
                    android:layout_marginTop="6dp"
                    android:hint="@string/country_hint"
                    app:counterEnabled="true"
                    app:counterMaxLength="30"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/ic_location">

                    <AutoCompleteTextView
                        android:id="@+id/country_spinner_selector"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/occupation_textinputlayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/country_spinner"
                    android:layout_marginTop="6dp"
                    android:hint="Occupation"
                    app:counterEnabled="true"
                    app:counterMaxLength="30"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/ic_occupation">

                    <AutoCompleteTextView
                        android:id="@+id/occupation_selector"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/registration_outlinedButton"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/occupation_textinputlayout"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="6dp"
                    android:text="@string/registration"
                    android:textColor="@color/colorblack" />


            </RelativeLayout>

        </ScrollView>
    </androidx.cardview.widget.CardView>



</RelativeLayout>