<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    tools:context=".Fragments.Registration_Fragment">

    <ImageView
        android:id="@+id/login_logo_imageview"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:src="@drawable/splash_icon" />

    <TextView
        android:id="@+id/appname_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_logo_imageview"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:layout_marginBottom="17dp"
        android:text="@string/app_name"
        android:textColor="@color/colorblack"
        android:textSize="28dp"

        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:id="@+id/login_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardElevation="20dp"
        android:layout_below="@id/appname_textview"
        app:cardCornerRadius="16dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mail_textinputlayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:hint="@string/mail_hint"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/ic_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mail_textinputedittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reg_password_textinputlayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/mail_textinputlayout"
                android:layout_marginTop="6dp"
                android:hint="@string/password_name"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/ic_password"
                tools:ignore="NotSibling">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/reg_password_textinputedittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirmpassword_textinputlayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/reg_password_textinputlayout"
                android:layout_marginTop="6dp"
                android:hint="@string/confirm_password"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/ic_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirmpassword_textinputedittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/registration_outlinedButton"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/confirmpassword_textinputlayout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="6dp"
                android:text="@string/registration"
                android:textColor="@color/colorblack" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>